Fix issue with side scroll on mobile view

--- a/goose-portfolio/src/Components/Footer/Footer.css
+++ b/goose-portfolio/src/Components/Footer/Footer.css
@@ -3,6 +3,7 @@
 .Footer {
     background-color: #83D4D4;
     min-height: 26vh;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,9 +13,10 @@
 
 
 .GooseFooter {
+   width: 50%; 
    position: absolute;
-   margin-top: -25.5%;
-   margin-left: 13%;
+   margin-top: -22%;
+   margin-left: 0%;
   
    
 
@@ -68,9 +70,10 @@
 
     .GooseFooter {
         position: relative;
-        width: 100%;
-        margin-top: -68%;
-        margin-left: 10%;
+        width: 80%;
+        height: auto;
+        margin-top: -63%;
+       
     }
 }
 
