--- a/goose-portfolio/src/Components/Header/Header.css
+++ b/goose-portfolio/src/Components/Header/Header.css
@@ -12,18 +12,18 @@
 }
 
 .HeaderTitle {
-    width: 150%;
+    max-width: 150%;
     height: auto;
     margin-top: -3vh;
-    margin-left: -40%;
+    margin-right: 30%;
     
    
 }
 
 .ProfileImg {
-    width: 60%;
+    max-width: 37%;
     height: auto;
-    margin-top: -77vh;
+    margin-top: -70.5vh;
     margin-right: -120%;
     
 }
@@ -31,8 +31,8 @@
 .Goose {
     position: absolute;
     bottom: 0%;
-    left: -40%;
-    width: 150%;
+    left: -30%;
+    max-width: 80%;
     height: auto;
     
 }
@@ -42,14 +42,14 @@
 
 @media only screen and (min-width:320px) and (max-width: 480px)  {
     .Header {
-        width: 92%;
+        width: 80%; 
         height: auto;
         left: 9%;
        
     }
 
     .HeaderTitle {
-        width: 100%;
+        width: 150%;
         height: auto;
         margin-top: 5%;
         margin-right: 15%;
@@ -58,16 +58,15 @@
     }
     
     .ProfileImg {
-        width: 60%;
+        width: 75%;
         margin-top: -2.5%;
-        /* margin-left: -123%; */
-        padding-right: 120%;
+        margin-right: 0%;
     }
     
     .Goose {
-       width: 100%; 
+       width: 130%; 
        margin-bottom: 0%;
-       margin-left: 11%;
+       margin-left: 0%;
 
         
     }
