--- a/goose-portfolio/src/Components/Skills/Skills.css
+++ b/goose-portfolio/src/Components/Skills/Skills.css
@@ -136,7 +136,7 @@
   }
   
   .SkillsTitle {
-    width: 250px;
+    width: 70vw;
     height: auto;
     /* padding-left: 20px;
     margin-top: -30px; */
